// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteCityWeather component matches the snapshot after loading error 1`] = `
<div
  id="favorite"
>
  <button
    id="delete-button"
    onClick={[Function]}
  >
    Delete city
  </button>
  <div
    id="weather-container"
  >
    <div
      id="left-block"
    >
      <div
        id="city-name"
      >
        correctCityName
      </div>
    </div>
    <div
      id="right-block"
    >
      <div>
        Loading error.
      </div>
    </div>
  </div>
</div>
`;

exports[`FavoriteCityWeather component matches the snapshot after loading for correct city 1`] = `
<div
  id="favorite"
>
  <button
    id="delete-button"
    onClick={[Function]}
  >
    Delete city
  </button>
  <div
    id="weather-container"
  >
    <div
      id="left-block"
    >
      <div
        id="city-name"
      >
        correctCityName
      </div>
      <div
        id="icon-temp"
      >
        <img
          alt="Weather icon"
          src="http://openweathermap.org/img/w/50n.png"
        />
        <div
          id="temp"
        >
          14
          °C
        </div>
      </div>
    </div>
    <div
      id="right-block"
    >
      <div
        className="info"
      >
        <div>
          Description:
        </div>
        <div
          className="value"
        >
          mist
        </div>
      </div>
      <div
        className="info"
      >
        <div>
          Barometer:
        </div>
        <div
          className="value"
        >
          1022
           hPa
        </div>
      </div>
      <div
        className="info"
      >
        <div>
          Humidity:
        </div>
        <div
          className="value"
        >
          100
           %
        </div>
      </div>
      <div
        className="info"
      >
        <div>
          Wind:
        </div>
        <div
          className="value"
        >
          3.6
           m/s
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FavoriteCityWeather component matches the snapshot on loading 1`] = `
<div
  id="favorite"
>
  <div
    id="weather-container"
  >
    <div
      id="left-block"
    >
      <div
        id="city-name"
      >
        correctCityName
      </div>
    </div>
    <div
      id="right-block"
    >
      <div
        id="spinner"
      />
    </div>
  </div>
</div>
`;
